[MRG][FIX] Improve color contrast in admin navbar dropdowns for better readability. [from revision 67820]

--- a/themes/fivealive-lite/options/grape/scss/_variables.scss
+++ b/themes/fivealive-lite/options/grape/scss/_variables.scss
@@ -92,7 +92,7 @@ $input-border-right-color: #fff;
 $input-border-bottom-color: #fff;
 $input-border-left-color: #e4afd3;
 
-$dropdown-bg: #a02871;
+$dropdown-bg: #c82b8b;
 $dropdown-border-color: rgba(0, 0, 0, 0.15);
 
 $dropdown-link-color: #ffffff;
